fix cards text overflow

--- a/style.css
+++ b/style.css
@@ -235,8 +235,7 @@ header {
 .card-body {
   position: relative;
   padding: .5rem 1.5rem;
-  overflow: hidden;
-  word-break: break-all;
+  white-space: wrap;
   text-overflow: ellipsis;
   font-size: 1.5rem;
   flex-basis: 13rem;
